<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_public_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_project"
            android:icon="@drawable/baseline_list_24"
            android:title="@string/menu_project" />
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/menu_profil" />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/baseline_check_24"
            android:title="@string/menu_task" />
    </group>
</menu>