<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.taskmanagement.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.example.taskmanagement.ui.tasks.TasksFragment"
        android:label="@string/menu_task"
        tools:layout="@layout/fragment_tasks" />
    <fragment
        android:id="@+id/nav_project"
        android:name="com.example.taskmanagement.ui.project.ProjectFragment"
        android:label="@string/menu_project"
        tools:layout="@layout/fragment_projects" />

    <fragment
        android:id="@+id/nav_profil"
        android:name="com.example.taskmanagement.ui.profil.ProfilFragment"
        android:label="@string/menu_profil"
        tools:layout="@layout/fragment_profil" />
</navigation>